完成部分传值

--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,11 @@
 	<classpathentry kind="lib" path="lib/iKAnalyzer.jar"/>
 	<classpathentry kind="lib" path="lib/poi-3.17-beta1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.9.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/ezmorph-1.0.6.jar"/>
+	<classpathentry kind="lib" path="lib/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
