modified:   .classpath 	modified:   .settings/org.eclipse.core.resources.prefs 	modified:   .settings/org.eclipse.jdt.core.prefs 	new file:   .settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs 	new file:   .settings/org.eclipse.wst.ws.service.policy.prefs 	new file:   build/.gitignore 	new file:   dic/dic.txt 	new file:   "dic/\344\270\211\351\230\262.scel" 	new file:   "dic/\344\270\255\345\233\275\345\206\233\346\240\241\345\220\215\347\247\260.scel" 	new file:   "dic/\345\205\254\345\256\211\347\263\273\347\273\237\345\270\270\347\224\250\350\257\215\344\270\200.scel" 	new file:   "dic/\345\205\254\345\256\211\350\257\215\346\261\207.scel" 	new file:   "dic/\345\205\265\346\263\225.scel" 	new file:   "dic/\345\205\265\346\263\225\357\274\233\344\270\215\346\210\230\350\200\214\345\261\210\344\272\272\344\271\213\345\205\265\357\274\214\345\226\204\344\271\213\345\226\204\350\200\205\344\271\237.scel" 	new file:   "dic/\345\206\233\344\272\213\346\260\224\350\261\241\346\260\264\346\226\207.scel" 	new file:   "dic/\345\206\233\344\272\213\346\265\213\347\273\230.scel" 	new file:   "dic/\345\206\233\344\272\213\347\273\274\345\220\210\347\224\250\350\257\255.scel" 	new file:   "dic/\345\206\233\344\272\213\347\273\274\345\220\210\350\257\215\345\272\223.scel" 	new file:   "dic/\345\206\233\344\272\213\350\256\255\347\273\203.scel" 	new file:   "dic/\345\206\233\344\272\213\350\257\215\346\261\207\345\244\247\345\205\250\343\200\220\345\256\230\346\226\271\346\216\250\350\215\220\343\200\221.scel" 	new file:   "dic/\345\206\233\344\272\213\350\257\215\350\257\255\345\244\247\345\205\250.scel" 	new file:   "dic/\345\206\233\344\272\213\350\260\213\347\225\245\345\220\215.scel" 	new file:   "dic/\345\206\233\345\210\266.scel" 	new file:   "dic/\345\206\233\351\230\237\346\224\277\346\262\273\345\267\245\344\275\234.scel" 	new file:   "dic/\345\206\233\351\230\237\347\273\204\347\273\207\346\214\207\346\214\245.scel" 	new file:   "dic/\345\210\200\345\272\223

--- a/src/mylucene/settings.properties
+++ b/src/mylucene/settings.properties
@@ -1,5 +1,5 @@
-indexDir=C:\\Users\\dragon\\eclipse-workspace\\knowledgegraph-project\\index
-dateDir=C:\\Users\\dragon\\eclipse-workspace\\knowledgegraph-project\\data
+indexDir=C:\\Users\\LuckyGong\\Documents\\Github\\knowledgegraph-project\\index
+dateDir=C:\\Users\\LuckyGong\\Documents\\Github\\knowledgegraph-project\\data
 databaseIp=localhost
 databasePort=27017
 databaseName=admin
